Modified {30,31}-style with correct vertical alignment method on line 689

--- a/CSS_advanced/styles/31-style.css
+++ b/CSS_advanced/styles/31-style.css
@@ -686,7 +686,7 @@ ul.row {
   height: 30rem;
   width: 100%;
   object-fit: cover;
-  object-position: bottom;
+  vertical-align: bottom;
 }
 
 .card-work .card-inner {
@@ -716,12 +716,12 @@ ul.row {
 }
 
 .card-work .card-title a::after {
-  content: "";
   position: absolute;
   top: 0;
+  right: 0;
   bottom: 0;
   left: 0;
-  right: 0;
+  content: "";
 }
 
 .card-work:hover .card-title {
